--- a/oauth_backend/package.json
+++ b/oauth_backend/package.json
@@ -10,8 +10,8 @@
     "prebuild": "rimraf dist",
     "build": "npm run copy-files && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "npm run copy-files && nest start",
-    "start:dev": "npm run copy-files && nest start --watch",
+    "start": "TZ=Asia/Seoul npm run copy-files && nest start",
+    "start:dev": "TZ=Asia/Seoul npm run copy-files && nest start --watch ",
     "start:debug": "npm run copy-files && nest start --debug --watch",
     "start:prod": "npm run copy-files && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -26,11 +26,7 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
-    "@types/js-yaml": "^4.0.5",
-    "cpx": "^1.5.0",
     "joi": "^17.6.0",
-    "js-yaml": "^4.1.0",
-    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
